[UPDATE]: finished task 5